# raglint

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
raglint/: __init__.py
raglint/core/: __init__.py  checks.py  contract.py
tests/: __init__.py  test_checks.py
