[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raglint"
version = "0.1.0"
description = "Static analysis for RAG outputs — catch hallucinations before production"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Alex Alexapolsky", email = "metawake@gmail.com"}
]
keywords = ["ai", "llm", "rag", "testing", "hallucination", "linting", "pytest", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/metawake/raglint"
Documentation = "https://github.com/metawake/raglint#readme"
GitHub = "https://github.com/metawake"
LinkedIn = "https://www.linkedin.com/in/alexey-a-181a614/"

[tool.setuptools.packages.find]
where = ["."]
include = ["raglint*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
